# pigeon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/client/: main.c
client/src/: client.c  client.h  main.c  work.c  work.h
include/: daemonize.h  definitions.h  error_process.h  pigeon.h  pigeon_protocol.h  thpool.h  utils.h
server/: CMakeLists.txt
server/src/: command.h  main.c  server.c  server.h  work.c  work.h
utils/: CMakeLists.txt
utils/src/: daemonize.c  error_process.c  main.c  pigeon_protocol.c  thpool.c
